--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 
 
 {format, [
-    {files, ["lib/src/*.erl","lib/test/*.erl"]},
+    {files, ["src/*.erl","test/*.erl"]},
     {formatter, default_formatter},
     {options, #{ribbon=>80 }}   
 ]}.
