--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{erl_opts, [debug_info,{pc, unicode}]}.
+{erl_opts, [debug_info]}.
 {deps, []}.
 
 {plugins, [rebar3_format,rebar3_hex]}.
@@ -9,3 +9,8 @@
     {formatter, default_formatter},
     {options, #{ribbon=>80 }}   
 ]}.
+
+{edoc_opts, [
+  {doclet, edoc_doclet_chunks},
+  {layout, edoc_layout_chunks},
+  {dir, "doc"}]}.
